force-app/main/default/objects/sked__Availability_Pattern__c/sked__Availability_Pattern__c.object-meta.xml
<CustomObject>
    <description>Table to store availability patterns</description>
    <label>Availability Pattern</label>
    <nameField>
        <label>Availability Pattern Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Availability Patterns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>