force-app/main/default/objects/sked__Availability_Pattern__c/fields/sked__Description__c.field-meta.xml
<CustomField>
    <fullName>sked__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>