force-app/main/default/objects/sked__Availability_Pattern__c/fields/sked__Hash__c.field-meta.xml
<CustomField>
    <fullName>sked__Hash__c</fullName>
    <label>Hash</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>