force-app/main/default/objects/sked__Availability_Pattern__c/fields/sked__Pattern__c.field-meta.xml
<CustomField>
    <fullName>sked__Pattern__c</fullName>
    <label>Pattern</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>