force-app/main/default/objects/sked__Availability_Pattern__c/fields/sked_Default_for_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Default_for_Resource_Type__c</fullName>
    <label>Default for Resource Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Person</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>