force-app/main/default/objects/sked__Availability_Pattern__c/fields/sked_Validate_2CDO_Rule__c.field-meta.xml
<CustomField>
    <fullName>sked_Validate_2CDO_Rule__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Validate 2CDO Rule</label>
    <type>Checkbox</type>
</CustomField>