force-app/main/default/objects/sked__Availability_Pattern__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sked_Default_for_Resource_Type__c</columns>
    <columns>sked_Validate_2CDO_Rule__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>